--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,15 @@
     display: inline-block;
     font-size: 16px;
     border-radius: 8px;
+    margin-bottom:5px;
+
+}
+
+.list {
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
 }
 
 .button-1 {
@@ -33,6 +42,9 @@
 
 .title {
 	text-align: center;
+	font-family:'Helvetica', 'Arial', 'Sans-Serif';
+	font-size: 3em;
+	color: white;
 }
 
 .footer {
